# guia-base

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
practicas/0-repaso/: CMakeLists.txt  repaso.c  repaso.h
practicas/0-repaso/archivos/: TP0_EJ6.txt
practicas/0-repaso/tests/: test_04_jugadores.c  test_digito_en_numero.c  test_donde_esta_el_punto.c  test_donde_esta_el_punto_bis.c  test_proceso_archivo.c  test_viviendas.c
practicas/1-recursividad/: CMakeLists.txt  recursividad.c  recursividad.h
practicas/1-recursividad/tests/: test_capicua.c  test_divisible_por_7.c  test_explosion.c  test_fibonacci.c  test_mafia_china.c  test_palindromos.c  test_producto.c  test_separador_miles.c
practicas/2-listas/: CMakeLists.txt  practica_listas.c  practica_listas.h
practicas/2-listas/tests/: test_dato_maximo.c  test_lista_es_multiplo.c  test_lista_reflejada.c  test_subconjuntos_suman_n.c  test_sublistas.c
practicas/2-tads/: CMakeLists.txt  fecha-juliano.c  fecha-struct.c  fecha.h  numero-racional.c  numero-racional.h
practicas/2-tads/tests/: test_fecha.c  test_racional.c
practicas/3-listas/tests/: test_comparacion_de_listas.c  test_invertir_lista.c  test_lista_azar.c  test_lista_multiplo_escalar.c  test_menor_datos.c  test_polinomio.c  test_promedio_lista.c
practicas/3-pilas/: practica_pilas.c  practica_pilas.h
practicas/3-pilas/tests/: test_01_buscar_elemento.c  test_02_insertar_elemento.c  test_05_copiar_pila.c  test_07_comparar_pilas.c  test_09_invertir_pila.c  test_10_eliminar_todas_ocurrencias.c  test_11_elementos_en_comun.c
practicas/4-colas/: CMakeLists.txt  practica_colas.c
practicas/4-colas/tests/: test_colas_01_buscar_elemento.c  test_colas_03_eliminar_elemento.c  test_colas_05_duplicado.c  test_colas_06_invertir.c  test_colas_07_comparar.c  test_colas_08_mismos_elementos.c  test_colas_09_unicos.c  test_colas_10_divisores.c  test_colas_12_atencion_cliente.c
practicas/4-pilas/: CMakeLists.txt
practicas/4-pilas/tests/: test_03_eliminar_elemento.c  test_04_intercambiar_elementos.c  test_06_contar_elementos.c  test_08_cambio_base.c
practicas/5-arboles/tests/: test_arboles_01_nodos_terminales.c  test_arboles_02_nodos_interiores.c  test_arboles_05_nodo_padre.c  test_arboles_07_nodo_hermanos.c  test_arboles_10_nodo_mismo_nivel.c  test_arboles_11_equivalentes.c  test_arboles_13_nivel.c  test_arboles_16_recorrido_anchura.c  test_arboles_avl.c  test_arboles_binarios.c  test_arboles_binarios_busqueda.c
practicas/5-colas/: practica_colas.h
practicas/5-colas/tests/: test_colas_01_buscar_elemento.c  test_colas_02_colarse.c  test_colas_03_eliminar_elemento.c  test_colas_04_contar_elementos.c  test_colas_05_duplicado.c  test_colas_06_invertir.c  test_colas_07_comparar.c  test_colas_08_mismos_elementos.c  test_colas_09_unicos.c  test_colas_11_repetidos.c  test_colas_12_atencion_cliente.c
practicas/6-arboles/: CMakeLists.txt  practica_arboles.c  practica_arboles.h
practicas/6-arboles/tests/: test_arboles_03_hojas_mismo_nivel.c  test_arboles_04_posiciones_ocurrencias.c  test_arboles_06_nodo_hijos.c  test_arboles_08_nodo_nivel.c  test_arboles_09_nodo_altura_rama.c  test_arboles_12_altura.c  test_arboles_14_nodos_interiores.c  test_arboles_15_hojas_mismo_nivel.c  test_arboles_17_cantidad_nodos.c  test_arboles_18_similares.c  test_arboles_19_nodo_padre.c  test_arboles_20_nodo_hermanos.c  test_arboles_avl.c
practicas/6-tabla-hash/: practica_tabla_hash.h
practicas/6-tabla-hash/tests/: tabla_hash_vs_arboles_avl.c  test_tabla_hash_01_entendiendo.c
practicas/6-tablas-hash/: CMakeLists.txt  practica_tablas_hash.c  practica_tablas_hash.h
practicas/6-tablas-hash/tests/: tablas_hash_vs_arboles_avl.c  test_tabla_hash_01_entendiendo.c  test_tabla_hash_02_comparando.c
practicas/7-tabla-hash/: CMakeLists.txt  practica_tabla_hash.c
practicas/7-tabla-hash/tests/: tabla_hash_vs_arboles_avl.c  test_tabla_hash_01_entendiendo.c  test_tabla_hash_02_comparando.c
practicas/8-conjuntos/: CMakeLists.txt  practica_conjuntos.c  practica_conjuntos.h
practicas/8-conjuntos/tests/: test_conjuntos_01.c
tads/: CMakeLists.txt  tipo_elemento.c  tipo_elemento.h
tads/arboles/: arbol-avl.c  arbol-avl.h  arbol-binario-busqueda.c  arbol-binario.c  arbol-binario.h  nodo.c  nodo.h  util_arboles.c
tads/colas/: colas.h  colas_arreglos.c  colas_arreglos_circular.c  colas_punteros.c
tads/conjuntos/: conjuntos-avl.c  conjuntos-listas.c  conjuntos.h
tads/listas/: listas.h  listas_arreglos.c  listas_cursores.c  listas_punteros.c
tads/pilas/: pilas.h  pilas_arreglos.c  pilas_punteros.c
tads/tabla-hash/: tabla-hash-lista-colisiones.c  tabla-hash-zona-overflow.c
utilidades/: CMakeLists.txt  aserciones.c  aserciones.h  cadenas.c  cadenas.h  util_listas.c  util_listas.h
